@@ -223,8 +223,6 @@ def lazy_register_optimizers():
 plugin_cmds.register_lazy('cmd_svn_import', [], 'bzrlib.plugins.svn.commands')
 plugin_cmds.register_lazy('cmd_svn_branching_scheme', [], 
                           'bzrlib.plugins.svn.mapping3.commands')
-plugin_cmds.register_lazy('cmd_svn_set_revprops', [], 
-                          'bzrlib.plugins.svn.commands')
 plugin_cmds.register_lazy('cmd_svn_layout', [], 
                           'bzrlib.plugins.svn.commands')
 
