@@ -182,47 +182,6 @@ class cmd_svn_import(Command):
             from_repos.unlock()
 
 
-class cmd_svn_set_revprops(Command):
-    """Migrate Bazaar metadata to Subversion revision properties.
-
-    This requires that you have permission to change the 
-    revision properties on the repository.
-
-    To change these permissions, edit the hooks/pre-revprop-change 
-    file in the Subversion repository. 
-    """
-    takes_args = ['location?']
-    from bzrlib.plugins.svn.mapping import mapping_registry
-    takes_options = [RegistryOption('mapping', 
-                                 help="New mapping to upgrade to.",
-                                 registry=mapping_registry,
-                                 title="Subversion mapping",
-                                 value_switches=True),
-                     Option('upgrade', help='Upgrade to new mapping version rather than setting revision properties for the current mapping')]
-
-    def run(self, location=".", upgrade=False, mapping=None):
-        from bzrlib.errors import BzrCommandError
-        from bzrlib.repository import Repository
-        from bzrlib.plugins.svn.upgrade import set_revprops, upgrade_revprops
-        from bzrlib.plugins.svn.mapping import mapping_registry
-        repos = Repository.open(location) 
-        if not repos.transport.has_capability("commit-revprops"):
-            raise BzrCommandError("Please upgrade the Subversion server to 1.5 or higher.")
-        if mapping is None:
-            mapping = mapping_registry.get_default()
-        new_mapping = mapping.from_repository(repos)
-        if not new_mapping.can_use_revprops:
-            raise BzrCommandError("Please specify a different mapping, %s doesn't support revision properties." % new_mapping.name)
-
-        if upgrade:
-            num = upgrade_revprops(repos, new_mapping)
-        else:
-            num = set_revprops(repos)
-        self.outf.write("Revision properties set for %d revisions.\n" % num)
-        self.outf.write("Please restore the hooks/pre-revprop-change script "
-                        "to refuse changes to most revision properties.\n")
-
-
 class cmd_svn_layout(Command):
     """Print the repository layout in use for a Subversion repository.
 
